; ModuleID = '/home/carl/AnghaBench/linux/kernel/sched/extr_pelt.c___accumulate_pelt_segments.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/sched/extr_pelt.c___accumulate_pelt_segments.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOAD_AVG_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64, i64)* @__accumulate_pelt_segments to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @__accumulate_pelt_segments(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %10 = load i64, i64* %6, align 8
  store i64 %10, i64* %9, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* %4, align 8
  %13 = call i64 @decay_load(i64 %11, i64 %12)
  store i64 %13, i64* %7, align 8
  %14 = load i64, i64* @LOAD_AVG_MAX, align 8
  %15 = load i64, i64* @LOAD_AVG_MAX, align 8
  %16 = load i64, i64* %4, align 8
  %17 = call i64 @decay_load(i64 %15, i64 %16)
  %18 = sub nsw i64 %14, %17
  %19 = sub nsw i64 %18, 1024
  store i64 %19, i64* %8, align 8
  %20 = load i64, i64* %7, align 8
  %21 = load i64, i64* %8, align 8
  %22 = add nsw i64 %20, %21
  %23 = load i64, i64* %9, align 8
  %24 = add nsw i64 %22, %23
  ret i64 %24
}

declare dso_local i64 @decay_load(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
